Sezione Footer Terminata

--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         
         <div class="navigation .flex-container">
             <div class="flex-items">
-                <section class="logo"></section>
-                <section class="links"></section>
-                <section class="login-area"></section>
+                <section class="logo">Logo</section>
+                <section class="links">
+                    <a href="">Link</a>
+                    <a href="">Link</a>
+                    <a href="">Link</a>
+                    <a href="">Link</a>
+                    <a href="">Link</a>
+                </section>
+                <section class="login-area">Login</section>
             </div>
         </div>
 
@@ -52,6 +58,25 @@
         </div>
     </main>
 
+    <footer>
+        <div class="footer-top">
+            <div class="footer-container">
+                <div class="icons"></div>
+                <div class="more-about"></div>
+                <div class="more-about"></div>
+                <div class="more-about"></div>
+                <div class="more-about"></div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="footer-container2">
+                <span>Logo</span>
+                <button>Registrati</button>
+            </div>
+
+
+        </div>
+    </footer>
     
 </body>
 </html>
